make into vector

--- a/Convert to list.ipynb
+++ b/Convert to list.ipynb
@@ -385,7 +385,7 @@
     "    s2words = s2[\"utterance\"].values.tolist()\n",
     "    context = convo[\"context\"].str.extract('(\\w+)').values[0].item()\n",
     "    escore = int(convo[\"empathy\"].values[0])\n",
-    "    lsconv.append([context, s1words, s2words, escore])\n"
+    "    lsconv.append([context, s1words, s2words, escore])"
    ]
   },
   {
