--- a/Multi-class classification.ipynb
+++ b/Multi-class classification.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,16 @@
       "(1, 10)\n",
       "(4, 10)\n",
       "(1, 10)\n",
-      "(5, 10)\n"
+      "(5, 10)\n",
+      "(1, 10)\n",
+      "(6, 10)\n",
+      "(1, 10)\n",
+      "(7, 10)\n",
+      "(1, 10)\n",
+      "(8, 10)\n",
+      "(1, 10)\n",
+      "(9, 10)\n",
+      "Elapsed time: 11.5868 seconds\n"
      ]
     }
    ],
@@ -118,8 +127,6 @@
     "        person2 = \" \".join(conversations[i][2])\n",
     "        temp = np.array(empathy(person1, person2))\n",
     "        temp = np.reshape(temp, (1,10))\n",
-    "        print(temp.shape)\n",
-    "        print(values.shape)\n",
     "        values = np.append(values, temp, axis = 0)\n",
     "    return values\n",
     "t = Timer()\n",
@@ -130,22 +137,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(100,)"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "v.shape"
+    "np.save(\"first 100.npy\", v)"
    ]
   },
   {
