--- a/Convert to list.ipynb
+++ b/Convert to list.ipynb
@@ -11,9 +11,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\parke\\Anaconda3\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3058: DtypeWarning: Columns (1,4,8,9) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  interactivity=interactivity, compiler=compiler, result=result)\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -203,7 +211,7 @@
        "[79159 rows x 7 columns]"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,14 +224,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(78304, 8)\n",
+      "(79159, 8)\n",
       "(78304, 8)\n"
      ]
     }
@@ -238,145 +246,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hit:6790_conv:13580     8\n",
-      "hit:7872_conv:15744     8\n",
-      "hit:11399_conv:22798    8\n",
-      "hit:6773_conv:13547     8\n",
-      "hit:5476_conv:10952     8\n",
+      "hit:2120_conv:4240      8\n",
+      "hit:10149_conv:20299    8\n",
+      "hit:1800_conv:3600      8\n",
+      "hit:6742_conv:13485     8\n",
+      "hit:7143_conv:14287     8\n",
       "                       ..\n",
-      "hit:7463_conv:14926     8\n",
-      "hit:62_conv:124         8\n",
-      "hit:8807_conv:17615     8\n",
-      "hit:9787_conv:19575     8\n",
-      "hit:10105_conv:20211    8\n",
-      "Name: conv_id, Length: 200, dtype: int64\n"
+      "hit:9417_conv:18835     1\n",
+      "hit:1412_conv:2825      1\n",
+      "hit:9511_conv:19023     1\n",
+      "hit:4597_conv:9195      1\n",
+      "hit:805_conv:1610       1\n",
+      "Name: conv_id, Length: 18208, dtype: int64\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[['surprised',\n",
-       "  ['I found out that my wife is pregnant today.',\n",
-       "   'Very.  It will be my first.',\n",
-       "   'No clue',\n",
-       "   \"I'm rooting for a son myself.  I can't say she feels the same.\"],\n",
-       "  ['Are you excited?',\n",
-       "   \"Do you know if you're having a boy or girl yet?\",\n",
-       "   \"I hope it's a boy I love kids.\",\n",
-       "   'Got to get him playing some sports for sure.'],\n",
-       "  4],\n",
-       " ['ashamed',\n",
-       "  ['Earlier this year my mom got really sick and ended up in the hospital. I feel like I should have been more vigilant about her health.',\n",
-       "   \"Yes_comma_ that's true_comma_ they won't always listen. Still I can't help but beat myself up about it_comma_ and feel like I could have done more. I'm trying to get past the feeling of guilt_comma_ but it's hard. \",\n",
-       "   'Thank you so much for your comforting words. At least she is doing a bit better now. I guess I have to accept that there is only so much I can do. ',\n",
-       "   'That is a really good point. Thanks again so much.'],\n",
-       "  [\"So sorry to hear about your Mom - I do hope she's better now. In my personal experience_comma_ you can watch and advise all you like_comma_ but they often won't listen - my Mom was like that.\",\n",
-       "   \"Please don't be so hard on yourself. It's sometimes hard to remind ourselves that our parents are people in their own right and_comma_ while we care very much about them_comma_ at the end of the day they'll do what they think is right.\",\n",
-       "   \"Exactly! You have to do your thing and she has to do hers. Just by being there if she needs help_comma_ you're doing so much for her!\",\n",
-       "   \"You are very welcome. I've been there :)\"],\n",
-       "  5],\n",
-       " ['ashamed',\n",
-       "  ['I pulled out of my driveway during a horrendous rain storm and accidently ran over my neighbors cat',\n",
-       "   'It was an accident but I feel so bad and hate to even admit I did it I just feel awful about it',\n",
-       "   'Its horrible they are my neighbors and I know how much they love the cat_comma_ I am mortified_comma_ embarrassed and remorseful',\n",
-       "   'They do but I still feel lower than dirt about it'],\n",
-       "  [\"Oh my gosh! It isn't your fault!!!\",\n",
-       "   'I have ran over animals as well. It is an unfortunate reality.',\n",
-       "   'Do they understand it was an accident?',\n",
-       "   'It could be much worse. They could blame you and you would feel even worse. You should feel better with time.'],\n",
-       "  5],\n",
-       " ['proud',\n",
-       "  ['So excited to get my marks back from chemistry.',\n",
-       "   \"It's organic chemistry_comma_ quite difficult so I was shocked at my 95%.\",\n",
-       "   \"Exactly it's difficult to remember all that stuff.\",\n",
-       "   'What was your favorite class?'],\n",
-       "  ['Which chemistry class are you taking?',\n",
-       "   'Yikes. organic chemistry was the last chemistry class I took.     Yuck reaction mechanisms... sn1 sn2 etc.',\n",
-       "   \"yeah I wasn't a huge fan of the class.\",\n",
-       "   \"Depends on what way you're talking about Maybe physics 1 or maybe calc II.  Thats where things really started to come together for how things work +  the math to understand how things work.\"],\n",
-       "  5],\n",
-       " ['caring',\n",
-       "  ['I just love little kids.',\n",
-       "   'Not yet. I am going to become certified to work in a daycare though. I love being around little kids',\n",
-       "   'I hope not for me lol',\n",
-       "   \"That's true\"],\n",
-       "  ['I have 3_comma_ do you have any',\n",
-       "   \"I don't think I could work in a daycare. It would be overwhelming.\",\n",
-       "   'Some people are just better at working with kids.',\n",
-       "   \"I like kids but I wouldn't want to work with them all day.\"],\n",
-       "  5],\n",
-       " ['content',\n",
-       "  ['I had a great time this weekend.',\n",
-       "   'We took a trip to the mountains to hike.  So nice to be away from the city outside in nature.',\n",
-       "   \"That sounds fun.  I haven't been to Colorado yet.  I'd like to go.\",\n",
-       "   \"It's very relaxing.  There was a lot of people.  More than I expected to see.\"],\n",
-       "  ['Oh yeah? Nice to hear. What exactly did you do?',\n",
-       "   \"That's awesome_comma_ I'm from Kansas and first went to Colorado just a couple years ago. It was beautiful!\",\n",
-       "   'I agree though_comma_ always a good time to get away and explore some nature life.',\n",
-       "   \"Well I'm pleased to hear you had a fun time. Hope you get to do it again soon.\"],\n",
-       "  5],\n",
-       " ['anxious',\n",
-       "  [\"I don't think my partner's been faithful to me lately. So I just took an HIV test. Waiting for the results has me so worried.\",\n",
-       "   'Well she seemed really close to another guy at a party we were at last weekend. And I see her get flirty with some other guys around campus too.',\n",
-       "   \"I hope the tests come up negative. I'm probably going to break up with her too.\",\n",
-       "   \"That's true. I know that logically. But the fear just wells up in my stomach.\"],\n",
-       "  ['I can imagine that would be a painful waiting period. Why do you belive she is unfaithful?',\n",
-       "   'I can see the why you would feel that way. I would be worried too.',\n",
-       "   'The good news is the chances of actually getting HIV is relatively low. You should not have to worry about it.',\n",
-       "   'I can imagine it would. You dont need that stress in your life.'],\n",
-       "  5],\n",
-       " ['furious',\n",
-       "  ['I let my daughter go shopping for school clothes with her friends today',\n",
-       "   'She bought 3 things. I am so mad at her',\n",
-       "   'She bought three longs sleeve shirts. Its like 100 degrees until november',\n",
-       "   'I bet they were just on snapchat the whole time.'],\n",
-       "  [\"How'd she do?  Did she get the right clothes?\",\n",
-       "   'Were the three things not in the dress code?',\n",
-       "   \"Yiiiiiiiiiiikes!  Long sleeves in the heat!  *cringes*  Times like these make me glad our schools went to uniforms!  But I understand about the heat - we're in short sleeved polos until November at the earliest.\",\n",
-       "   \"Sounds like what kids would do!  But the bright side is_comma_ if you have two days worth of fall or winter_comma_ she's prepared!\"],\n",
-       "  5],\n",
-       " ['grateful',\n",
-       "  ['My transmission went out in my car at the worst possible time. No way could I afford to get it replaced or rebuilt. My dad was able to loan me $500 to get the new transmission_comma_ and my step dad was able to put it in.',\n",
-       "   \"It's still a work in progress_comma_ but we tested the transmission before we put it in. It works wonderfully and came out of a car that only has 90_comma_000 miles on it_comma_ versus mine that has 200_comma_000. I would like to get a new car_comma_ but I don't want to take on another payment until my house is paid off.\",\n",
-       "   'Yes it is! Especially for two!',\n",
-       "   \"Of course she does! Lol that's hilarious_comma_ but I know how hard teenagers are so it's kind of almost serious too. \"],\n",
-       "  [\"So is it working now? I need atransmission for an old volvo. I'm saving for a new car instead.\",\n",
-       "   \"Makes sense. I don't want any more bills until my kids are in school. Daycare is very expensive.\",\n",
-       "   \"of course the 13 year old hates to babysit. I can't wait until she moves out. jk\",\n",
-       "   'This was the most fun chat Ive had today. Enjoy yur day!'],\n",
-       "  5],\n",
-       " ['devastated',\n",
-       "  ['I meant my DOG got into rat poison and died. It was a truly horrific accident.',\n",
-       "   'He was a little over 8 years old so not long enough!',\n",
-       "   \"Yes that's true. Now I am A LOT more careful about where I put rat poison.\",\n",
-       "   'No_comma_ and it happened very fast. I started seeing symptoms and he died the next day even after I took him to the vet.'],\n",
-       "  ['Wow that is terrible_comma_ I hope he got to live a long life before that happened.',\n",
-       "   'Thats terrible_comma_ at least he wasnt a puppy I guess.',\n",
-       "   'I can imagine you would be_comma_ wouldnt want that to happen again.',\n",
-       "   'Crazy they wont even eat vegetables but they will eat rat poison.'],\n",
-       "  5]]"
-      ]
-     },
-     "execution_count": 123,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "conversations = train[\"conv_id\"].value_counts()\n",
-    "conversations = conversations.iloc[:200]\n",
     "print(conversations)\n",
-    "lsconv = []\n",
+    "lsconv = pd.DataFrame()\n",
     "for ids in conversations.index:\n",
     "    convo = train.loc[train[\"conv_id\"] == ids]\n",
     "    convo = convo.drop(columns = [\"utterance_idx\", \"selfeval\", \"conv_id\"])\n",
+    "    if len(convo[\"speaker_idx\"].unique()) !=2:\n",
+    "            continue\n",
     "    s1id = convo[\"speaker_idx\"].unique()[0]\n",
     "    s2id = convo[\"speaker_idx\"].unique()[1]\n",
     "    s1 = convo.loc[convo[\"speaker_idx\"]==s1id]\n",
@@ -385,7 +285,50 @@
     "    s2words = s2[\"utterance\"].values.tolist()\n",
     "    context = convo[\"context\"].str.extract('(\\w+)').values[0].item()\n",
     "    escore = int(convo[\"empathy\"].values[0])\n",
-    "    lsconv.append([context, s1words, s2words, escore])"
+    "    lsconv = lsconv.append({\"context\":context, \"s1\": s1words, \"s2\": s2words, \"e\": escore}, ignore_index = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "         context    e                                                 s1  \\\n",
+      "0        hopeful  5.0  [hi there?, did you see my post above about al...   \n",
+      "1        content  5.0  [I love walking my dogs on these late summer m...   \n",
+      "2            sad  5.0  [Leaving home makes me feel unhappy, I have to...   \n",
+      "3        furious  5.0  [Can't believe my professor marked all this wr...   \n",
+      "4          proud  5.0  [Yesterday I bought my very first videogame wi...   \n",
+      "..           ...  ...                                                ...   \n",
+      "195      jealous  4.0  [My friend got a huge scholarship when he bare...   \n",
+      "196      furious  5.0  [I am the only one who cleans in my apartment,...   \n",
+      "197        angry  5.0  [I applied for a job recently. It was a federa...   \n",
+      "198    disgusted  5.0  [My food order today did not turn out as well ...   \n",
+      "199  sentimental  5.0  [I kept all of my kids first day pics every ye...   \n",
+      "\n",
+      "                                                    s2  \n",
+      "0    [Hi friend_comma_ how are you?, Not yet_comma_...  \n",
+      "1    [Amen. What kind of dogs do yo have?, Aw littl...  \n",
+      "2    [That makes me so sad. Why is that so?, yes th...  \n",
+      "3    [Marked what wrong?, Did you speak with him?, ...  \n",
+      "4    [Really? What game did you get?, Is it good?, ...  \n",
+      "..                                                 ...  \n",
+      "195  [How did  he manage to do that?, I mean you sa...  \n",
+      "196  [Are you the only one who lives in your apartm...  \n",
+      "197  [Oh wow! what did you do?, Thank goodness for ...  \n",
+      "198  [Sorry to hear!  What all did you order?  And ...  \n",
+      "199  [I need to try and do that., That's sweet. Hav...  \n",
+      "\n",
+      "[200 rows x 4 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(lsconv)"
    ]
   },
   {
