--- a/Multi-class classification.ipynb
+++ b/Multi-class classification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,43 +61,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\users\\parke\\onedrive\\documents\\github\\citrusenv\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3437: DtypeWarning: Columns (1,4,8,9) have mixed types.Specify dtype option on import or set low_memory=False.\n",
-      "  exec(code_obj, self.user_global_ns, self.user_ns)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(1, 10)\n",
-      "(1, 10)\n",
-      "(1, 10)\n",
-      "(2, 10)\n",
-      "(1, 10)\n",
-      "(3, 10)\n",
-      "(1, 10)\n",
-      "(4, 10)\n",
-      "(1, 10)\n",
-      "(5, 10)\n",
-      "(1, 10)\n",
-      "(6, 10)\n",
-      "(1, 10)\n",
-      "(7, 10)\n",
-      "(1, 10)\n",
-      "(8, 10)\n",
-      "(1, 10)\n",
-      "(9, 10)\n",
-      "Elapsed time: 11.5868 seconds\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def getConversations(s,e):\n",
     "    train = pd.read_csv(\"train.csv\")\n",
@@ -106,8 +72,8 @@
     "    train[\"empathy\"] = selfeval.str.extract('\\d\\|\\d\\|\\d_(\\d)\\|\\d\\|\\d')\n",
     "    train = train.dropna()\n",
     "    conversations = train[\"conv_id\"].value_counts()\n",
-    "    conversations = conversations[s:e]\n",
     "    lsconv = []\n",
+    "    i = 0\n",
     "    for ids in conversations.index:\n",
     "        convo = train.loc[train[\"conv_id\"] == ids]\n",
     "        convo = convo.drop(columns=[\"utterance_idx\", \"selfeval\", \"conv_id\"])\n",
@@ -123,7 +89,34 @@
     "        escore = int(convo[\"empathy\"].values[0])\n",
     "        prompt = [convo[\"prompt\"].unique()[0]]\n",
     "        lsconv.append([context, prompt + s1words, s2words, escore])\n",
+    "        \n",
+    "        if i % 100 == 0:\n",
+    "            print(i)\n",
+    "        i +=1\n",
     "    return lsconv\n",
+    "\n",
+    "def getLabels():\n",
+    "    train = pd.read_csv(\"train.csv\")\n",
+    "    train = train.iloc[:, :7].dropna()\n",
+    "    selfeval = train['selfeval']\n",
+    "    train[\"empathy\"] = selfeval.str.extract('\\d\\|\\d\\|\\d_(\\d)\\|\\d\\|\\d')\n",
+    "    train = train.dropna()\n",
+    "    conversations = train[\"conv_id\"].value_counts()\n",
+    "    print(len(convsersations))\n",
+    "    labels = []\n",
+    "    i = 0\n",
+    "    for ids in conversations.index:\n",
+    "        convo = train.loc[train[\"conv_id\"] == ids]\n",
+    "        convo = convo.drop(columns=[\"utterance_idx\", \"selfeval\", \"conv_id\"])\n",
+    "        if len(convo[\"speaker_idx\"].unique()) !=2:\n",
+    "            continue\n",
+    "        escore = int(convo[\"empathy\"].values[0])\n",
+    "        labels.append(escore)\n",
+    "        \n",
+    "        if i % 1000 == 0:\n",
+    "            print(i)\n",
+    "        i +=1\n",
+    "    return labels\n",
     "\n",
     "def empathy(prompt, response):\n",
     "    # Gets just the emotion values for each statement.\n",
@@ -144,11 +137,7 @@
     "        temp = np.array(empathy(person1, person2))\n",
     "        temp = np.reshape(temp, (1,10))\n",
     "        values = np.append(values, temp, axis = 0)\n",
-    "    return values\n",
-    "t = Timer()\n",
-    "t.start()\n",
-    "v = testing(0, 10)\n",
-    "t.stop()"
+    "    return values"
    ]
   },
   {
@@ -170,6 +159,78 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\users\\parke\\onedrive\\documents\\github\\citrusenv\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3357: DtypeWarning: Columns (1,4,8,9) have mixed types.Specify dtype option on import or set low_memory=False.\n",
+      "  if (await self.run_code(code, result,  async_=asy)):\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1000\n",
+      "2000\n",
+      "3000\n",
+      "4000\n",
+      "5000\n",
+      "6000\n",
+      "7000\n",
+      "8000\n",
+      "9000\n",
+      "10000\n",
+      "11000\n",
+      "12000\n",
+      "13000\n",
+      "14000\n",
+      "15000\n",
+      "16000\n",
+      "17000\n",
+      "18000\n"
+     ]
+    }
+   ],
+   "source": [
+    "labelstest = getLabels()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "18169\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 1, 2, 3, 4, 5, 6])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "labels = np.array(labels)\n",
+    "print(len(labels))\n",
+    "np.unique(labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
    "outputs": [
@@ -185,11 +246,73 @@
     }
    ],
    "source": [
+    "n000 = np.load(\"first 1001.npy\")\n",
     "n1000 = np.load(\"first 1001.npy\")\n",
     "n2000 = np.load(\"2000s.npy\")\n",
     "n3000 = np.load(\"3000s.npy\")\n",
+    "n4000 = np.load(\"first 1001.npy\")\n",
     "alls = np.concatenate((n1000, n2000, n3000))\n",
     "alls.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9736842105263158\n"
+     ]
+    }
+   ],
+   "source": [
+    "# importing necessary libraries\n",
+    "from sklearn import datasets\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "iris = datasets.load_iris()\n",
+    "# X -> features, y -> label\n",
+    "X = iris.data\n",
+    "y = iris.target\n",
+    "  \n",
+    "# dividing X, y into train and test data\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state = 0)\n",
+    "  \n",
+    "# training a KNN classifier\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "knn = KNeighborsClassifier(n_neighbors = 5).fit(X_train, y_train)\n",
+    "  \n",
+    "# accuracy on X_test\n",
+    "accuracy = knn.score(X_test, y_test)\n",
+    "print(accuracy )\n",
+    "  \n",
+    "# creating a confusion matrix\n",
+    "knn_predictions = knn.predict(X_test) \n",
+    "cm = confusion_matrix(y_test, knn_predictions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(150,)"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y.shape"
    ]
   }
  ],
