--- a/Multi-class classification.ipynb
+++ b/Multi-class classification.ipynb
@@ -257,30 +257,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(6994, 10)"
+       "(7027, 10)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "n000 = np.load(\"0000s.npy\")\n",
-    "n1000 = np.load(\"first 1001.npy\")\n",
+    "n1000 = np.load(\"1000s.npy\")\n",
     "n2000 = np.load(\"2000s.npy\")\n",
     "n3000 = np.load(\"3000s.npy\")\n",
-    "n4000 = np.load(\"first 4001.npy\")\n",
+    "n4000 = np.load(\"4000s.npy\")\n",
     "n5000 = np.load(\"5000s.npy\")\n",
     "n6000 = np.load(\"6000s.npy\")\n",
-    "alls = np.concatenate((n000, n1000, n2000, n3000, n4000 , n5000 , n6000))\n",
-    "alls.shape"
+    "n7000 = np.load(\"7000s.npy\")\n",
+    "n18000 = np.load(\"18000s.npy\")\n",
+    "alls = np.concatenate((n000, n1000, n2000, n3000, n4000 , n5000 , n6000, n7000, n18000))\n",
+    "n18000.shape"
    ]
   },
   {
